tests/ui/closures/generic-typed-nested-closures-59494.stderr
error[E0308]: mismatched types
  --> $DIR/generic-typed-nested-closures-59494.rs:21:40
   |
LL |     let t7 = |env| |a| |b| t7p(f, g)(((env, a), b));
   |                                        ^^^ cyclic type of infinite size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
